@@ -36,7 +36,10 @@ public class Main {
     private ArrayList<Sphere> blackEyes = new ArrayList<>();
     private ArrayList<Sphere> nose = new ArrayList<>();
     private ArrayList<Sphere> whiteFace = new ArrayList<>();
-//    private ArrayList<Circle> blockWhiteFace = new ArrayList<>();
+    private ArrayList<Sphere> kepala = new ArrayList<>();
+    private ArrayList<Sphere> badan = new ArrayList<>();
+    private ArrayList<Sphere> kaki = new ArrayList<>();
+
     int countDegree = 0;
     Camera camera = new Camera();
     Projection projection = new Projection(window.getWidth(), window.getHeight());
@@ -45,11 +48,46 @@ public class Main {
     public void init() {
         window.init();
         GL.createCapabilities();
-        camera.setPosition(-1.15f, 0f, 2f);
-        camera.setRotation((float) Math.toRadians(0.0f), (float) Math.toRadians(30.0f));
+        camera.setPosition(0f, 0f, 3f);
+
+        //paha
+        kaki.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.2f,
+                0.25f,
+                0.25f, 36,
+                18,3));
 
 
-        whiteFace.add(new Sphere(Arrays.asList(
+        kaki.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.2f,
+                0.25f,
+                0.25f, 36,
+                18,3));
+        kaki.get(0).translateObject(-0.2f,-0.9f,0f);
+        kaki.get(1).translateObject(0.2f,-0.9f,0f);
+
+        //telapak kaki
+        kaki.add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -60,12 +98,30 @@ public class Main {
                 ),
                 new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
                 Arrays.asList(0f, 0f, 0f),
-                0.45f,
-                0.35f,
-                0.45f, 36,
-                18,2));
-        whiteFace.get(0).translateObject(0f,-0.14f,0f);
-        head.add(new Sphere(Arrays.asList(
+                0.2f,
+                0.1f,
+                0.1f, 36,
+                18,3));
+        kaki.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.2f,
+                0.1f,
+                0.1f, 36,
+                18,3));
+        kaki.get(2).translateObject(-0.25f,-1.1f,0f);
+        kaki.get(3).translateObject(0.25f,-1.1f,0f);
+
+        //head
+        kepala.add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -80,23 +136,9 @@ public class Main {
                 0.5f,
                 0.5f, 36,
                 18,2));
-        whiteEye.add(new Sphere(Arrays.asList(
-                new ShaderProgram.ShaderModuleData(
-                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
-                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
-        ),
-                new ArrayList<>(
-                        List.of(
-                        )
-                ),
-                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
-                Arrays.asList(0f, 0f, 0f),
-                0.1f,
-                0.1f,
-                0.12f, 36,
-                18,2));
 
-        whiteEye.add(new Sphere(Arrays.asList(
+        //white face
+        kepala.add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -107,13 +149,14 @@ public class Main {
                 ),
                 new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
                 Arrays.asList(0f, 0f, 0f),
-                0.1f,
-                0.1f,
-                0.12f, 36,
+                0.45f,
+                0.35f,
+                0.45f, 36,
                 18,2));
-        whiteEye.get(0).translateObject(-0.12f, 0.2f, 0f);
-        whiteEye.get(1).translateObject(0.12f, 0.21f, 0f);
-        lineWhiteEye.add(new Sphere(Arrays.asList(
+        kepala.get(1).translateObject(0f,-0.14f,0f);
+
+        //line mata
+        kepala.add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -128,7 +171,7 @@ public class Main {
                 0.11f,
                 0.13f, 36,
                 18,2));
-        lineWhiteEye.add(new Sphere(Arrays.asList(
+        kepala.add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -143,10 +186,45 @@ public class Main {
                 0.11f,
                 0.13f, 36,
                 18,2));
-        lineWhiteEye.get(0).translateObject(-0.12f, 0.2f, 0f);
-        lineWhiteEye.get(1).translateObject(0.12f, 0.21f, 0f);
+        kepala.get(2).translateObject(-0.12f, 0.2f, 0f);
+        kepala.get(3).translateObject(0.12f, 0.21f, 0f);
 
-        blackEyes.add(new Sphere(Arrays.asList(
+        //mata
+        kepala.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.1f,
+                0.1f,
+                0.12f, 36,
+                18,2));
+        kepala.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.1f,
+                0.1f,
+                0.12f, 36,
+                18,2));
+        kepala.get(4).translateObject(-0.12f, 0.2f, 0f);
+        kepala.get(5).translateObject(0.12f, 0.21f, 0f);
+
+        //pupil
+        kepala.add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -161,7 +239,7 @@ public class Main {
                 0.02f,
                 0.02f, 36,
                 18,2));
-        blackEyes.add(new Sphere(Arrays.asList(
+        kepala.add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -176,9 +254,11 @@ public class Main {
                 0.02f,
                 0.02f, 36,
                 18,2));
-        blackEyes.get(0).translateObject(-0.08f, 0.15f, 0f);
-        blackEyes.get(1).translateObject(0.08f, 0.15f, 0f);
-        nose.add(new Sphere(Arrays.asList(
+        kepala.get(6).translateObject(-0.08f, 0.15f, 0f);
+        kepala.get(7).translateObject(0.08f, 0.15f, 0f);
+
+        //nose
+        kepala.add(new Sphere(Arrays.asList(
                 new ShaderProgram.ShaderModuleData(
                         "resources/shaders/scene.vert", GL_VERTEX_SHADER),
                 new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
@@ -193,9 +273,283 @@ public class Main {
                 0.07f,
                 0.07f, 36,
                 18,2));
-        nose.get(0).translateObject(0f, 0.05f, 0f);
+        kepala.get(8).translateObject(0f, 0.05f, 0f);
+        //mulut
+        kepala.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 0.0f, 0.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.2f,
+                0.1f,
+                0.2f, 36,
+                18,2));
+        kepala.get(9).translateObject(0f,-0.25f,0f);
 
-//        // code
+        //badan
+        badan.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.45f,
+                0.6f,
+                0.6f, 36,
+                18,3));
+        badan.get(0).translateObject(0f,-0.4f,0f);
+
+        //kantong ajaib luar
+
+        badan.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.35f,
+                0.4f,
+                0.4f, 108,
+                72,2));
+        badan.get(1).translateObject(0f,-0.5f,0f);
+
+        //kantong ajaib dalam
+
+        badan.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(0.0f, 0.0f, 0.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.32f,
+                0.32f,
+                0.32f, 108,
+                72,9));
+        badan.get(2).translateObject(0f,1.195f,0f);
+        badan.get(2).rotateObject(180f,0f,0f,0f);
+
+        badan.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.30f,
+                0.30f,
+                0.30f, 108,
+                72,9));
+        badan.get(3).translateObject(0f,1.2f,0f);
+        badan.get(3).rotateObject(180f,0f,0f,0f);
+
+        //kalung
+        badan.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 0.0f, 0.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.4f,
+                0.3f,
+                0.3f, 36,
+                18,3));
+        badan.get(4).translateObject(0f,-0.25f,0f);
+
+        //lonceng
+        badan.add(new Sphere(Arrays.asList(
+                new ShaderProgram.ShaderModuleData(
+                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+        ),
+                new ArrayList<>(
+                        List.of(
+                        )
+                ),
+                new Vector4f(1.0f, 0.65f, 0.0f, 0.0f),
+                Arrays.asList(0f, 0f, 0f),
+                0.05f,
+                0.05f,
+                0.05f, 36,
+                18,2));
+        badan.get(5).translateObject(0f,-0.58f,0f);
+
+
+//        head.add(new Sphere(Arrays.asList(
+//                new ShaderProgram.ShaderModuleData(
+//                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+//                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+//        ),
+//                new ArrayList<>(
+//                        List.of(
+//                        )
+//                ),
+//                new Vector4f(0.0f, 0.0f, 1.0f, 0.0f),
+//                Arrays.asList(0f, 0f, 0f),
+//                0.5f,
+//                0.5f,
+//                0.5f, 36,
+//                18,2));
+//        whiteEye.add(new Sphere(Arrays.asList(
+//                new ShaderProgram.ShaderModuleData(
+//                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+//                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+//        ),
+//                new ArrayList<>(
+//                        List.of(
+//                        )
+//                ),
+//                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+//                Arrays.asList(0f, 0f, 0f),
+//                0.1f,
+//                0.1f,
+//                0.12f, 36,
+//                18,2));
+//        whiteEye.add(new Sphere(Arrays.asList(
+//                new ShaderProgram.ShaderModuleData(
+//                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+//                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+//        ),
+//                new ArrayList<>(
+//                        List.of(
+//                        )
+//                ),
+//                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+//                Arrays.asList(0f, 0f, 0f),
+//                0.1f,
+//                0.1f,
+//                0.12f, 36,
+//                18,2));
+//        whiteEye.get(0).translateObject(-0.12f, 0.2f, 0f);
+//        whiteEye.get(1).translateObject(0.12f, 0.21f, 0f);
+
+//        lineWhiteEye.add(new Sphere(Arrays.asList(
+//                new ShaderProgram.ShaderModuleData(
+//                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+//                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+//        ),
+//                new ArrayList<>(
+//                        List.of(
+//                        )
+//                ),
+//                new Vector4f(0.0f, 0.0f, 0.0f, 0.0f),
+//                Arrays.asList(0f, 0f, 0f),
+//                0.11f,
+//                0.11f,
+//                0.13f, 36,
+//                18,2));
+//        lineWhiteEye.add(new Sphere(Arrays.asList(
+//                new ShaderProgram.ShaderModuleData(
+//                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+//                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+//        ),
+//                new ArrayList<>(
+//                        List.of(
+//                        )
+//                ),
+//                new Vector4f(0.0f, 0.0f, 0.0f, 0.0f),
+//                Arrays.asList(0f, 0f, 0f),
+//                0.11f,
+//                0.11f,
+//                0.13f, 36,
+//                18,2));
+//        lineWhiteEye.get(0).translateObject(-0.12f, 0.2f, 0f);
+//        lineWhiteEye.get(1).translateObject(0.12f, 0.21f, 0f);
+
+//        blackEyes.add(new Sphere(Arrays.asList(
+//                new ShaderProgram.ShaderModuleData(
+//                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+//                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+//        ),
+//                new ArrayList<>(
+//                        List.of(
+//                        )
+//                ),
+//                new Vector4f(0.0f, 0.0f, 0.0f, 1.0f),
+//                Arrays.asList(0f, 0f, 0f),
+//                0.02f,
+//                0.02f,
+//                0.02f, 36,
+//                18,2));
+//        blackEyes.add(new Sphere(Arrays.asList(
+//                new ShaderProgram.ShaderModuleData(
+//                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+//                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+//        ),
+//                new ArrayList<>(
+//                        List.of(
+//                        )
+//                ),
+//                new Vector4f(0.0f, 0.0f, 0.0f, 1.0f),
+//                Arrays.asList(0f, 0f, 0f),
+//                0.02f,
+//                0.02f,
+//                0.02f, 36,
+//                18,2));
+//        blackEyes.get(0).translateObject(-0.08f, 0.15f, 0f);
+//        blackEyes.get(1).translateObject(0.08f, 0.15f, 0f);
+//        nose.add(new Sphere(Arrays.asList(
+//                new ShaderProgram.ShaderModuleData(
+//                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+//                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+//        ),
+//                new ArrayList<>(
+//                        List.of(
+//                        )
+//                ),
+//                new Vector4f(1.0f, 0.0f, 0.0f, 0.0f),
+//                Arrays.asList(0f, 0f, 0f),
+//                0.07f,
+//                0.07f,
+//                0.07f, 36,
+//                18,2));
+//        nose.get(0).translateObject(0f, 0.05f, 0f);
+//        whiteFace.add(new Sphere(Arrays.asList(
+//                new ShaderProgram.ShaderModuleData(
+//                        "resources/shaders/scene.vert", GL_VERTEX_SHADER),
+//                new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag", GL_FRAGMENT_SHADER)
+//        ),
+//                new ArrayList<>(
+//                        List.of(
+//                        )
+//                ),
+//                new Vector4f(1.0f, 1.0f, 1.0f, 0.0f),
+//                Arrays.asList(0f, 0f, 0f),
+//                0.45f,
+//                0.35f,
+//                0.45f, 36,
+//                18,2));
+//        whiteFace.get(0).translateObject(0f,-0.14f,0f);
+////        // code
         /*objects.add(new Object2d(
                 Arrays.asList(
                         // shaderFile lokasi menyesuaikan objectnya
@@ -626,15 +980,24 @@ public class Main {
             camera.moveForward(0.3f);
 
         }
-        if (window.isKeyPressed(GLFW_KEY_S)) {
+         if (window.isKeyPressed(GLFW_KEY_S)) {
             camera.moveBackwards(0.3f);
 
         }
-        if (window.isKeyPressed(GLFW_KEY_A)) {
-            camera.moveLeft(0.1f);
+         if (window.isKeyPressed(GLFW_KEY_A)) {
+             camera.moveLeft(0.1f);
+            for (Sphere kepala:kepala
+            ) {
+               kepala.translateObject(-0.1f,0f,0f);
+            }
+
         }
-        if (window.isKeyPressed(GLFW_KEY_D)) {
+         if (window.isKeyPressed(GLFW_KEY_D)) {
             camera.moveRight(0.1f);
+            for (Sphere kepala:kepala
+            ) {
+                kepala.translateObject(0.1f,0f,0f);
+            }
         }
 
         if (window.getMouseInput().isLeftButtonPressed()) {
@@ -781,44 +1144,43 @@ public class Main {
             curve();
 
 //            code
-            for (Sphere head : head
+            for (Sphere tangan: kaki
             ) {
-                head.draw(camera, projection);
+                tangan.draw(camera,projection);
             }
-            for (Sphere whiteFace:whiteFace
+            for (Sphere badan:badan
             ) {
-//                whiteFace.createSphere();
-//                whiteFace.setupVAOVBO();
-                whiteFace.draw(camera,projection);
+                badan.draw(camera,projection);
             }
-//            for (Object blockWhiteFace:blockWhiteFace
-//                 ) {
-//                blockWhiteFace.draw(camera,projection);
-//            }
-            for (Sphere lineWhiteEye:lineWhiteEye
+            for (Sphere kepala:kepala
                  ) {
-//                lineWhiteEye.createSphere();
-//                lineWhiteEye.setupVAOVBO();
-                lineWhiteEye.draw(camera,projection);
+                kepala.draw(camera,projection);
             }
-            for (Sphere whiteEyes : whiteEye
-            ) {
-//                whiteEyes.createSphere();
-//                whiteEyes.setupVAOVBO();
-                whiteEyes.draw(camera, projection);
-            }
-            for (Sphere blackEyes : blackEyes
-            ) {
-//                blackEyes.createSphere();
-//                blackEyes.setupVAOVBO();
-                blackEyes.draw(camera, projection);
-            }
-            for (Sphere nose : nose
-            ) {
-//                nose.createSphere();
-//                nose.setupVAOVBO();
-                nose.draw(camera, projection);
-            }
+
+//            for (Sphere head : head
+//            ) {
+//                head.draw(camera, projection);
+//            }
+//            for (Sphere whiteFace:whiteFace
+//            ) {
+//                whiteFace.draw(camera,projection);
+//            }
+//            for (Sphere lineWhiteEye:lineWhiteEye
+//                 ) {
+//                lineWhiteEye.draw(camera,projection);
+//            }
+//            for (Sphere whiteEyes : whiteEye
+//            ) {
+//                whiteEyes.draw(camera, projection);
+//            }
+//            for (Sphere blackEyes : blackEyes
+//            ) {
+//                blackEyes.draw(camera, projection);
+//            }
+//            for (Sphere nose : nose
+//            ) {
+//                nose.draw(camera, projection);
+//            }
 //            for (Object2d object : objects) {
 //                object.draw();
 //            }
